--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "postcss-cli": "^10.0.0",
     "postcss-nesting": "^10.1.10"
   },
-  "scripts": 
-    { "build:css": "postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css" }
+  "scripts": {
+    "build:css": "postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds"
+  }
 }
-
-
