--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.3",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.7",
     "esbuild": "^0.14.49",
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
-    "postcss-nesting": "^10.1.10"
+    "postcss-nesting": "^10.1.10",
+    "tailwindcss": "^3.1.6"
   },
   "scripts": {
-    "build:css": "postcss ./app/assets/stylesheets/application.postcss.css -o ./app/assets/builds/application.css",
+    "build:css": "tailwind --postcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css",
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds"
   }
 }
